<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZIT开发助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">IT开发助手</string>
    <string name="username">用户名</string>
    <string name="password">密　码</string>
    <string name="password_text">密码</string>
    <string name="show_password">显示密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="text_too_long_error1">不能大于</string>
    <string name="text_too_long_error2">个字符</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_new_daily">NewDailyActivity</string>
    <string name="title_activity_daily_editor">DailyEditorActivity</string>
    <string name="daily_date_choose_hint">请选择日期</string>
    <string name="daily_content_hint">在这里输入日志内容</string>
    <string name="daily_editor_submit">提交</string>

</resources>
