<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textColor="#3bccb5"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_corner"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="13dp"
                android:gravity="left|center_vertical"
                android:text="@string/username"
                android:textColor="#CCCCCC"
                android:textSize="18sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#cccccc"
                android:textColorHint="#eeeeee"
                android:hint="@string/username_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_corner"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="13dp"
                android:gravity="left|center_vertical"
                android:text="@string/password"
                android:textColor="#CCCCCC"
                android:textSize="18sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#cccccc"
                android:textColorHint="#eeeeee"
                android:hint="@string/password_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/login_cb_showpd"
                style="@style/CustomCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="23dp"
                android:text="@string/show_password"
                android:textColor="#CCCCCC"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_b_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/border_corner_button"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </RelativeLayout>

</RelativeLayout>