<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1" >

    <RelativeLayout
        android:id="@+id/daily_editor_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="#e4e4e4" >

        <Button
            android:id="@+id/daily_editor_btn_submit"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:background="@drawable/border_corner_submit"
            android:text="@string/daily_editor_submit"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/daily_editor_bottom_layout"
        android:layout_margin="8dp"
        android:background="@drawable/border_corner_detail" >

        <RelativeLayout
            android:id="@+id/daily_editor_day_choose_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="10dp" >

            <EditText
                android:id="@+id/daily_editor_day_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:focusable="false"
                android:hint="@string/daily_date_choose_hint"
                android:inputType="none"
                android:textColor="#000000"
                android:textColorHint="#CCCCCC"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/daily_editor_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/daily_editor_day_choose_layout"
            android:background="#e4e4e4" >
        </TextView>

        <EditText
            android:id="@+id/daily_editor_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/daily_editor_line"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/daily_content_hint"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#CCCCCC"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/daily_editor_shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>